# FusedANNS

./: .gitattributes  .gitignore  MOTIVATION_TESTS_SUMMARY.md  README.md  requirements.txt  run_all_tests.py
MUST-main/indexing_and_search/: CMakeLists.txt  S-MSAG.cpp  T-MSAG.cpp
MUST-main/indexing_and_search/cmake/: GA-OpenMP-depend.cmake
MUST-main/indexing_and_search/debug/: CMakeCache.txt  Makefile  S-MABB  S-MABG  S-MSAB  S-MSAG  T-MSAG  cmake_install.cmake
MUST-main/indexing_and_search/doc/result/: uqv_syn_m1_switch_2026_01_03_220714.tsv  uqv_syn_m1_switch_2026_01_03_222318.tsv  uqv_syn_m1_switch_2026_01_03_225427.tsv
MUST-main/indexing_and_search/doc/result/2025_12_30/: siftsmall_MSAB_res.txt  siftsmall_MSAG_res.txt
MUST-main/indexing_and_search/doc/result/2026_01_06/: celeba_MSAG_res_w1_-0.0848_w2_-1.1855.txt  celeba_MSAG_res_w1_-0.1000_w2_-1.0000.txt  celeba_MSAG_res_w1_-1.0000_w2_-1.0000.txt  celeba_MSAG_res_w1_-1.0000_w2_0.0000.txt
MUST-main/indexing_and_search/doc/result/2026_01_07/: celeba_MSAG_res_w1_-0.2000_w2_-1.0000.txt  celeba_MSAG_res_w1_0.0000_w2_-1.0000.txt  res_aux_strong.txt  (+2 more)
MUST-main/indexing_and_search/release/: CMakeCache.txt  Makefile  S-MABB  S-MABG  S-MSAB  S-MSAG  T-MSAG  cmake_install.cmake
MUST-main/indexing_and_search/release_topk/: CMakeCache.txt  Makefile  S-MABB  S-MABG  S-MSAB  S-MSAG  T-MSAG  cmake_install.cmake
MUST-main/indexing_and_search/scripts/: analyze_m1.py  dataset.sh  debug_m2.py  find_gt_centroid.py  gen_semisyn_modal2.py  generate_centroids.py  m1_fixed_lambda_stress_test.sh  m1_weight_sensitivity.sh  param.sh  plot_uqv_syn_results.py  prepare_celeba_dataset.py  prepare_celeba_resnet50.py  prepare_query_groups.py  run.sh  run_m2.sh  test.py  test1.py  test2.py  test3.py  uqv_syn_m1_switch.sh
MUST-main/indexing_and_search/src/: graph_anns_define.h
MUST-main/vector_weight_learning/src/: CMakeLists.txt  opt_set.cpp  util.cpp
(+57 files in other folders)
